samples/_failures_safe/1761040410_481802_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_82e2fd7f.c: In function ‘main’:
./samples/SAFE/__tmp_82e2fd7f.c:154:24: error: missing terminating " character
  154 |                 printf("No entries found for level %s\n
      |                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_82e2fd7f.c:154:17: error: expected expression at end of input
  154 |                 printf("No entries found for level %s\n
      |                 ^~~~~~
./samples/SAFE/__tmp_82e2fd7f.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_82e2fd7f.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_82e2fd7f.c:154:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_82e2fd7f.c:154:17: error: expected declaration or statement at end of input
